Fix styling issue on mobile

--- a/apps/helper-app/src/home/home.component.scss
+++ b/apps/helper-app/src/home/home.component.scss
@@ -165,6 +165,7 @@
 
       @media (max-width: $breakpoint-md) {
         margin: 0;
+        margin-bottom: 2rem;
       }
 
       a.action-card {
